Update name to Saurabh Bedi

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2024 Your Name | Contact: your.email@domain.com</p>
+        <p>&copy; 2024 Saurabh Bedi | Contact: saurabh.bedi@econ.uzh.ch.com, saurabhbedi199729@gmail.com, +41779936157</p>
     </footer>
 </body>
 </html>
