--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
     <section id="research">
         <h2>Research Projects</h2>
-        <p>Below are some of my recent projects:</p>
+        <p>Below:</p>
         <ul>
             <li><strong>Project 1:</strong> [Brief description of the project]</li>
             <li><strong>Project 2:</strong> [Brief description of the project]</li>
