--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="grid">
       <!-- LEFT: photo + quick links -->
       <aside class="sidebar">
-        <img class="photo" src="headshot.jpg" alt="Portrait of Saurabh Bedi" />
+        <img class="photo" src="imageSaurabh.jpg" alt="Portrait of Saurabh Bedi" />
         <div class="name">Saurabh Bedi</div>
         <p class="role">Neuroeconomics · Computational Cognitive Science</p>
 
