--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Saurabh Bedi | Neuroeconomics</title>
+  <title>Saurabh Bedi</title>
   <meta name="description" content="Saurabh Bedi — PhD in Neuroeconomics. Resource-rational inference, efficient coding, Bayesian computation in perception and decision making." />
 
   <style>
@@ -45,7 +45,7 @@
       display:block; border:1px solid var(--line);
     }
     .name{font-size:20px; font-weight:700; margin:14px 0 2px}
-    .role{color:var(--muted); margin:0 0 10px}
+    .role{color:var(--muted); margin:10px 0}
     .links{display:flex; flex-direction:column; gap:8px; margin-top:10px}
     .links a{
       display:flex; align-items:center; gap:10px;
@@ -75,15 +75,15 @@
   <div class="wrap">
     <header>
       <h1>Saurabh Bedi</h1>
-      <p>PhD candidate in Neuroeconomics, University of Zurich</p>
+      <p>PhD student in Neuroeconomics, University of Zurich</p>
     </header>
 
     <div class="grid">
       <!-- LEFT: photo + quick links -->
       <aside class="sidebar">
         <img class="photo" src="imageSaurabh.jpg" alt="Portrait of Saurabh Bedi" />
-        <div class="name">Saurabh Bedi</div>
-        <p class="role">Neuroeconomics · Computational Cognitive Science</p>
+        <!-- Email only under image -->
+        <p class="role"><a href="mailto:saurabh.bedi@econ.uzh.ch">saurabh.bedi@econ.uzh.ch</a></p>
 
         <div class="links">
           <a href="https://bsky.app/profile/saurabhbedi.bsky.social" target="_blank" rel="noopener">
@@ -101,13 +101,13 @@
         <div class="tag-group">
           <div class="tag-title">Current Work</div>
           <div>
-            <span class="pill">resource-rationality</span>
             <span class="pill">noisy inference</span>
             <span class="pill">efficient coding</span>
             <span class="pill">Bayesian decoding</span>
             <span class="pill">probability distortions</span>
             <span class="pill">description–experience gap</span>
             <span class="pill">multi-attribute decisions</span>
+            <span class="pill">goal-dependent computation</span>
           </div>
         </div>
 
@@ -117,8 +117,7 @@
             <span class="pill">sequential decisions</span>
             <span class="pill">planning & learning</span>
             <span class="pill">modular hierarchical inference</span>
-            <span class="pill">memory-limited updating</span>
-            <span class="pill">goal-dependent computation</span>
+            <span class="pill">resource-rationality</span>
           </div>
         </div>
       </aside>
