--- a/index.html
+++ b/index.html
@@ -3,8 +3,48 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Saurabh Bedi</title>
-  <meta name="description" content="Saurabh Bedi — PhD in Neuroeconomics. Resource-rational inference, efficient coding, Bayesian computation in perception and decision making." />
+
+  <!-- Page title -->
+  <title>Saurabh Bedi Website</title>
+
+  <!-- Basic SEO -->
+  <meta name="description" content="Saurabh Bedi — PhD student in Neuroeconomics at the University of Zurich. Noisy inference, efficient coding, Bayesian decoding, and decision biases." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://saurabh9729.github.io/saurabhbedi/" />
+
+  <!-- Open Graph (for link previews) -->
+  <meta property="og:title" content="Saurabh Bedi — Website" />
+  <meta property="og:description" content="PhD student in Neuroeconomics at UZH. Noisy inference, efficient coding, Bayesian decoding, decision biases." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://saurabh9729.github.io/saurabhbedi/" />
+  <meta property="og:image" content="https://saurabh9729.github.io/saurabhbedi/imageSaurabh.jpg" />
+
+  <!-- Twitter card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Saurabh Bedi — Website" />
+  <meta name="twitter:description" content="PhD student in Neuroeconomics at UZH. Noisy inference, efficient coding, Bayesian decoding, decision biases." />
+  <meta name="twitter:image" content="https://saurabh9729.github.io/saurabhbedi/imageSaurabh.jpg" />
+
+  <!-- Structured data: Person -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Saurabh Bedi",
+    "jobTitle": "PhD student in Neuroeconomics",
+    "affiliation": {
+      "@type": "Organization",
+      "name": "University of Zurich"
+    },
+    "email": "mailto:saurabh.bedi@econ.uzh.ch",
+    "url": "https://saurabh9729.github.io/saurabhbedi/",
+    "image": "https://saurabh9729.github.io/saurabhbedi/imageSaurabh.jpg",
+    "sameAs": [
+      "https://bsky.app/profile/saurabhbedi.bsky.social",
+      "https://scholar.google.com/citations?user=PZrYFUMAAAAJ&hl=en"
+    ]
+  }
+  </script>
 
   <style>
     :root{
