updating about and interests

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     .tag-group{margin-top:14px}
     .tag-title{font-size:12px; font-weight:700; color:var(--muted); text-transform:uppercase; letter-spacing:.04em; margin-bottom:6px}
 
-    /* Underline utility (for the “here” link) */
+    /* Underline utility */
     .u{ text-decoration: underline; text-underline-offset: 2px; }
 
     /* --- Mobile fixes --- */
@@ -141,24 +141,24 @@
         <section id="about">
           <h2>About</h2>
           <p>
-            I am a PhD student in neuroeconomics in <strong>Christian Ruff’s</strong> group at the <strong>University of Zurich</strong>. My broad interests are <em>resource-rational cognition</em>, <em>noisy inference</em>, <em>efficient coding</em>, and <em>Bayesian decoding</em>—how a constrained brain exploits environmental structure to compute efficiently, yielding systematic biases and variability in behavior.
+            I am a PhD student in neuroeconomics in <strong>Christian Ruff’s</strong> group at the <strong>University of Zurich</strong>. My research asks how a <em>resource-constrained brain</em> exploits environmental structure to compute efficiently according to the goals of the agent, yielding systematic biases and variability in behavior.
           </p>
           <p>
-            Much of my work uses this perspective to explain well-known biases in economic decision making. For example, I study how noisy and efficient computations can produce <em>probability distortions</em> in described risk—see a recent preprint <a class="u" href="https://www.biorxiv.org/content/10.1101/2025.09.11.675565v1" target="_blank" rel="noopener">here</a>. Related projects extend this view to the <em>description–experience gap</em> in decisions under risk, and to how <em>task goals</em> modulate computations in <em>multi-attribute choice</em>. Ongoing work examines <em>valuation</em> as a modular, sequential, resource-rational noisy inference process.
+            For example, I study how noisy inference of bounded quantities like probabilities—with either Bayes-optimal decoding or efficient encoding—can independently produce the classic <em>probability distortion</em> pattern from prospect theory (<a class="u" href="https://www.biorxiv.org/content/10.1101/2025.09.11.675565v1" target="_blank" rel="noopener">see preprint</a>). Related projects use similar resource-rational formalisms to explain the <em>description–experience gap</em> in probability distortions, to show how <em>task goals</em> modulate computations in <em>multi-attribute decisions</em>, and to model <em>valuation</em> as a higher-order sequential inference process.
           </p>
           <p>
-            To date, my focus has been on <strong>single-trial decisions</strong>. I am now extending the same framework to <strong>sequential decision-making</strong>, where the temporal structure of trials and task goals shape planning and learning in more complex settings. Happy to chat.
+            To date, my focus has been on <strong>single-trial decisions</strong>. I am now extending the same framework to <strong>sequential decision-making</strong>, where the structure of sequences and the goals of the task shape planning and learning in more complex settings.
           </p>
         </section>
 
         <section id="interests">
           <h2>Interests</h2>
-          <ul>
-            <li>Resource-rational cognition; noisy inference; efficient coding</li>
-            <li>Bayesian decoding; computational psychophysics; decision under risk/uncertainty</li>
-            <li>Sequential decisions, planning, and statistical/RL learning</li>
-            <li>Links to physics: stochastic processes, constraints, information & representation</li>
-          </ul>
+          <p>
+            My current research interests build directly on this work: moving from single-trial decision making to sequential tasks, and asking how environmental structure and task goals interact to shape planning and learning. I am particularly interested in how the same principles of resource-rational noisy inference that explain simple biases can scale to account for computations in more complex, temporally extended situations.
+          </p>
+          <p>
+            As a side interest, I also enjoy thinking about analogies between these cognitive computations and dynamics in physical systems, such as how emergent behavior in models like the Ising model can be understood as statistical properties of constrained systems. While orthogonal to my main research, these connections often inspire my thinking about structure, noise, and representation.
+          </p>
         </section>
 
         <section id="education">
