updating about and interests

--- a/index.html
+++ b/index.html
@@ -141,23 +141,21 @@
         <section id="about">
           <h2>About</h2>
           <p>
-            I am a PhD student in neuroeconomics in <strong>Christian Ruff’s</strong> group at the <strong>University of Zurich</strong>. My research asks how a <em>resource-constrained brain</em> exploits environmental structure to compute efficiently according to the goals of the agent, yielding systematic biases and variability in behavior.
+            I am a PhD student in neuroeconomics in <strong>Christian Ruff’s</strong> group at the <strong>University of Zurich</strong>. My broad research interests are in understanding how a <em>resource-constrained brain</em> exploits the structure of the world to compute efficiently according to the goals of the agent, and how this approach yields systematic biases and variability patterns seen in human behavior.
           </p>
           <p>
-            For example, I study how noisy inference of bounded quantities like probabilities—with either Bayes-optimal decoding or efficient encoding—can independently produce the classic <em>probability distortion</em> pattern from prospect theory (<a class="u" href="https://www.biorxiv.org/content/10.1101/2025.09.11.675565v1" target="_blank" rel="noopener">see preprint</a>). Related projects use similar resource-rational formalisms to explain the <em>description–experience gap</em> in probability distortions, to show how <em>task goals</em> modulate computations in <em>multi-attribute decisions</em>, and to model <em>valuation</em> as a higher-order sequential inference process.
+            For example, I study how noisy inference of bounded quantities like probabilities, with either Bayes-optimal decoding or efficient encoding can independently produce the classic <em>probability distortion</em> pattern from prospect theory (<a class="u" href="https://www.biorxiv.org/content/10.1101/2025.09.11.675565v1" target="_blank" rel="noopener">see preprint</a>). Related projects use similar resource-rational formalisms to explain the <em>description–experience gap</em> in probability distortions, to show how <em>task goals</em> modulate computations in <em>multi-attribute decisions</em>, and to model <em>valuation</em> as a higher-order sequential (resource limited) inference process.
           </p>
-          <p>
-            To date, my focus has been on <strong>single-trial decisions</strong>. I am now extending the same framework to <strong>sequential decision-making</strong>, where the structure of sequences and the goals of the task shape planning and learning in more complex settings.
-          </p>
+
         </section>
 
         <section id="interests">
           <h2>Interests</h2>
           <p>
-            My current research interests build directly on this work: moving from single-trial decision making to sequential tasks, and asking how environmental structure and task goals interact to shape planning and learning. I am particularly interested in how the same principles of resource-rational noisy inference that explain simple biases can scale to account for computations in more complex, temporally extended situations.
+            While my work so far has focused on simple, single-trial decisions, I am now moving toward <strong>sequential decision making</strong>—again asking how resource-constrained computations, informed by both environmental structure and task goals, can explain behavior. This opens up a way of understanding more complex phenomena such as <em>planning</em> and <em>learning</em> under the same principles. I think this is a useful and exciting direction.
           </p>
           <p>
-            As a side interest, I also enjoy thinking about analogies between these cognitive computations and dynamics in physical systems, such as how emergent behavior in models like the Ising model can be understood as statistical properties of constrained systems. While orthogonal to my main research, these connections often inspire my thinking about structure, noise, and representation.
+            As a side interest, I also enjoy thinking about how these abstract cognitive computations might emerge as <em>properties of statistical physical systems</em> (e.g., the Ising model). While orthogonal to my main research, these loosely formed connections often inspire my thinking about how such computations could be implemented.
           </p>
         </section>
 
