updating about and interests

--- a/index.html
+++ b/index.html
@@ -144,15 +144,14 @@
             I am a PhD student in neuroeconomics in <strong>Christian Ruff’s</strong> group at the <strong>University of Zurich</strong>. My broad research interests are in understanding how a <em>resource-constrained brain</em> exploits the structure of the world to compute efficiently according to the goals of the agent, and how this approach yields systematic biases and variability patterns seen in human behavior.
           </p>
           <p>
-            For example, I study how noisy inference of bounded quantities like probabilities, with either Bayes-optimal decoding or efficient encoding can independently produce the classic <em>probability distortion</em> pattern from prospect theory (<a class="u" href="https://www.biorxiv.org/content/10.1101/2025.09.11.675565v1" target="_blank" rel="noopener">see preprint</a>). Related projects use similar resource-rational formalisms to explain the <em>description–experience gap</em> in probability distortions, to show how <em>task goals</em> modulate computations in <em>multi-attribute decisions</em>, and to model <em>valuation</em> as a higher-order sequential (resource limited) inference process.
+            For example, I study how noisy inference of bounded quantities like probabilities, with either Bayes-optimal decoding or efficient encoding, can independently produce the classic <em>probability distortion</em> pattern from prospect theory (<a class="u" href="https://www.biorxiv.org/content/10.1101/2025.09.11.675565v1" target="_blank" rel="noopener">see preprint</a>). Across these projects I pair formal theory with <em>behavioral experiments</em> to test model predictions. Related work uses the same resource-rational lens to explain the <em>description–experience gap</em>, to show how <em>task goals</em> modulate computations in <em>multi-attribute decisions</em>, and to model <em>valuation</em> as a higher-order sequential (resource-limited) inference process.
           </p>
-
         </section>
 
         <section id="interests">
           <h2>Interests</h2>
           <p>
-            While my work so far has focused on simple, single-trial decisions, I am now moving toward <strong>sequential decision making</strong>—again asking how resource-constrained computations, informed by both environmental structure and task goals, can explain behavior. This opens up a way of understanding more complex phenomena such as <em>planning</em> and <em>learning</em> under the same principles. I think this is a useful and exciting direction.
+            While my work so far has focused on simple, single-trial decisions, I am getting interested in <strong>sequential decision making</strong>—again in how resource-constrained computations, informed by both environmental structure and task goals, can explain behavior. This opens a way to understand more complex phenomena such as <em>planning</em> and <em>learning</em> under the same principles. I think this is a useful and exciting direction. If you'd like to know more or have any questions, please feel free to reach out!
           </p>
           <p>
             As a side interest, I also enjoy thinking about how these abstract cognitive computations might emerge as <em>properties of statistical physical systems</em> (e.g., the Ising model). While orthogonal to my main research, these loosely formed connections often inspire my thinking about how such computations could be implemented.
