updating about and interests

--- a/index.html
+++ b/index.html
@@ -151,11 +151,15 @@
         <section id="interests">
           <h2>Interests</h2>
           <p>
-            While my work so far has focused on simple, single-trial decisions, I am getting interested in <strong>sequential decision making</strong>—again in how resource-constrained computations, informed by both environmental structure and task goals, can explain behavior. This opens a way to understand more complex phenomena such as <em>planning</em> and <em>learning</em> under the same principles. I think this is a useful and exciting direction. If you'd like to know more or have any questions, please feel free to reach out!
+            While my work so far has focused on simple, single-trial decisions, I am getting interested in <strong>sequential decision making</strong>—again in how resource-constrained computations, informed by both environmental structure and task goals, can explain behavior. This opens a way to understand more complex phenomena such as <em>planning</em> and <em>learning</em> under the same principles. I think this is a useful and exciting direction.
           </p>
           <p>
             As a side interest, I also enjoy thinking about how these abstract cognitive computations might emerge as <em>properties of statistical physical systems</em> (e.g., the Ising model). While orthogonal to my main research, these loosely formed connections often inspire my thinking about how such computations could be implemented.
           </p>
+          <p>
+           If you'd like to chat or know more, please feel free to reach out!
+           </p>
+          
         </section>
 
         <section id="education">
